Slim FlipHistorySyncService for Hub token headroom (#49)
Extract shared AccountHttp used by flip history sync and bug reports,
collapse mutation/async boilerplate, and drop verbose javadoc so
src/main/java UTF-8 bytes shrink without changing sync behavior.

Co-authored-by: Cursor Agent <cursoragent@cursor.com>
Co-authored-by: RuneAssist <RuneAssist@users.noreply.github.com>